4242swerve2019/Debug/Build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt
See file:///C:/Users/cyborgs/SmartDashboard/Documents/GitHub/frc4241DS/4241swerve2019/build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt for all output for compileFrcUserProgramDebugExecutableFrcUserProgramCpp.
compiling OI.cpp failed.
In file included from C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\cpp\OI.cpp:8:0:
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\include/OI.h:27:1: error: expected ';' after class definition
 }
 ^
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\cpp\OI.cpp:27:11: error: redefinition of 'frc::Joystick* OI::getDriverJoystickRight()'
 Joystick* OI::getDriverJoystickRight() {
           ^~
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\cpp\OI.cpp:23:11: note: 'frc::Joystick* OI::getDriverJoystickRight()' previously defined here
 Joystick* OI::getDriverJoystickRight() {
           ^~

compiling DriveTrain.cpp failed.
In file included from C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\cpp\DriveTrain.cpp:1:0:
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\include/subsystems/DriveTrain.h:11:37: error: expected class-name before '{' token
 class DriveTrain : public Subsystem {
                                     ^
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\include/subsystems/DriveTrain.h:64:5: error: 'AnalogInput' does not name a type
     AnalogInput* frontLeftPos;
     ^~~~~~~~~~~
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\include/subsystems/DriveTrain.h:66:5: error: 'PIDController' does not name a type
     PIDController* frontLeft;
     ^~~~~~~~~~~~~
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\include/subsystems/DriveTrain.h:67:5: error: 'AnalogInput' does not name a type
     AnalogInput* frontRightPos;
     ^~~~~~~~~~~
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\include/subsystems/DriveTrain.h:69:5: error: 'PIDController' does not name a type
     PIDController* frontRight;
     ^~~~~~~~~~~~~
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\include/subsystems/DriveTrain.h:70:5: error: 'AnalogInput' does not name a type
     AnalogInput* rearLeftPos;
     ^~~~~~~~~~~
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\include/subsystems/DriveTrain.h:72:5: error: 'PIDController' does not name a type
     PIDController* rearLeft;
     ^~~~~~~~~~~~~
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\include/subsystems/DriveTrain.h:73:5: error: 'AnalogInput' does not name a type
     AnalogInput* rearRightPos;
     ^~~~~~~~~~~
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\include/subsystems/DriveTrain.h:75:5: error: 'PIDController' does not name a type
     PIDController* rearRight;
     ^~~~~~~~~~~~~
In file included from C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\include/Robot.h:14:0,
                 from C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\cpp\DriveTrain.cpp:3:
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\include/OI.h:27:1: error: expected ';' after class definition
 }
 ^
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\cpp\DriveTrain.cpp: In constructor 'DriveTrain::DriveTrain()':
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\cpp\DriveTrain.cpp:8:28: error: type 'frc::Subsystem' is not a direct base of 'DriveTrain'
 DriveTrain::DriveTrain() : Subsystem("DriveTrain") {
                            ^~~~~~~~~
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\cpp\DriveTrain.cpp:13:5: error: 'frontLeftPos' was not declared in this scope
     frontLeftPos = RobotMap::driveTrainFrontLeftPos;
     ^~~~~~~~~~~~
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\cpp\DriveTrain.cpp:15:5: error: 'frontLeft' was not declared in this scope
     frontLeft = RobotMap::driveTrainFrontLeft;
     ^~~~~~~~~
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\cpp\DriveTrain.cpp:16:5: error: 'frontRightPos' was not declared in this scope
     frontRightPos = RobotMap::driveTrainFrontRightPos;
     ^~~~~~~~~~~~~
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\cpp\DriveTrain.cpp:18:5: error: 'frontRight' was not declared in this scope
     frontRight = RobotMap::driveTrainFrontRight;
     ^~~~~~~~~~
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\cpp\DriveTrain.cpp:19:5: error: 'rearLeftPos' was not declared in this scope
     rearLeftPos = RobotMap::driveTrainRearLeftPos;
     ^~~~~~~~~~~
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\cpp\DriveTrain.cpp:21:5: error: 'rearLeft' was not declared in this scope
     rearLeft = RobotMap::driveTrainRearLeft;
     ^~~~~~~~
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\cpp\DriveTrain.cpp:22:5: error: 'rearRightPos' was not declared in this scope
     rearRightPos = RobotMap::driveTrainRearRightPos;
     ^~~~~~~~~~~~
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\cpp\DriveTrain.cpp:24:5: error: 'rearRight' was not declared in this scope
     rearRight = RobotMap::driveTrainRearRight;
     ^~~~~~~~~
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\cpp\DriveTrain.cpp: In member function 'void DriveTrain::SetSteerSetpoint(float, float, float, float)':
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\cpp\DriveTrain.cpp:208:5: error: 'frontLeft' was not declared in this scope
     frontLeft->SetSetpoint(CorrectSteerSetpoint(FLSetPoint + FLOffset));
     ^~~~~~~~~
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\cpp\DriveTrain.cpp:209:5: error: 'frontRight' was not declared in this scope
     frontRight->SetSetpoint(CorrectSteerSetpoint(FRSetPoint + FROffset));
     ^~~~~~~~~~
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\cpp\DriveTrain.cpp:210:5: error: 'rearLeft' was not declared in this scope
     rearLeft->SetSetpoint(CorrectSteerSetpoint(RLSetPoint + RLOffset));
     ^~~~~~~~
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\cpp\DriveTrain.cpp:211:5: error: 'rearRight' was not declared in this scope
     rearRight->SetSetpoint(CorrectSteerSetpoint(RRSetPoint + RROffset));
     ^~~~~~~~~
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\cpp\DriveTrain.cpp:213:27: error: 'frontLeftPos' was not declared in this scope
     if (fabs(FLSetPoint - frontLeftPos->GetAverageVoltage()) < 1.25 ||
                           ^~~~~~~~~~~~
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\cpp\DriveTrain.cpp:222:27: error: 'frontRightPos' was not declared in this scope
     if (fabs(FRSetPoint - frontRightPos->GetAverageVoltage()) < 1.25 ||
                           ^~~~~~~~~~~~~
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\cpp\DriveTrain.cpp:231:27: error: 'rearLeftPos' was not declared in this scope
     if (fabs(RLSetPoint - rearLeftPos->GetAverageVoltage()) < 1.25 ||
                           ^~~~~~~~~~~
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\cpp\DriveTrain.cpp:241:27: error: 'rearRightPos' was not declared in this scope
     if (fabs(RRSetPoint - rearRightPos->GetAverageVoltage()) < 1.25 ||
                           ^~~~~~~~~~~~

compiling Robot.cpp failed.
In file included from C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\include/Robot.h:14:0,
                 from C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\cpp\Robot.cpp:8:
C:\Users\cyborgs\SmartDashboard\Documents\GitHub\frc4241DS\4241swerve2019\src\main\include/OI.h:27:1: error: expected ';' after class definition
 }
 ^

Finished compileFrcUserProgramDebugExecutableFrcUserProgramCpp, see full log file:///C:/Users/cyborgs/SmartDashboard/Documents/GitHub/frc4241DS/4241swerve2019/build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt.
